--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 streamlit==1.30.0
 pandas==2.1.1
 numpy==1.26.0
-fpdf==1.7.2
+google-api-python-client==2.108.0
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
